Add authorisation roles for endpoints